samples/_failures_safe/1761354177_0da139_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5fdf3c60.c: In function ‘main’:
./samples/SAFE/__tmp_5fdf3c60.c:164:15: error: expected ‘;’ at end of input
  164 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_5fdf3c60.c:164:9: error: expected declaration or statement at end of input
  164 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_5fdf3c60.c:164:9: error: expected declaration or statement at end of input
